# deltahf

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  GXTB_USAGE.md  LICENSE  README.md  TABLE1_ANALYSIS.md  benchmark.py  environment.yml  pyproject.toml  safe.csv  table1_extracted.csv  uma_benchmark_results.md
.cache_xtb/: cache.json
.cache_xtb_uma/: cache.json
.cache_xtb_xtb_gxtb/: cache.json
.circleci/: config.yml
.claude/: settings.json
analysis/: README.md  comparison_workflow  plot_training_data.py  plot_zinc_vs_cawkwell.py  zinc_sample_10000.csv
atct/: ATcT.csv  atct_out.csv  extract_atct.py
deltahf/: __init__.py  __main__.py  atom_equivalents.py  cache.py  conformers.py  constants.py  pipeline.py  smiles.py  uma.py  xtb.py
docs/: USING_ATCT_DATA.md  atct_smiles_cache.json
examples/: README.md  atom_classification.py  compare_models.py  molecules.csv  predict_batch.py  predict_single.py
model_benchmarks/: README.md  gxtb_run  rf_run  uma_run  xtb_bench  xtb_run
model_training/: README.md  params_gxtb.json  params_uma.json  params_xtb.json
params/: gxtb_params.json  params_gxtb.json  params_uma.json  params_xtb.json  xtb_params.json
plots/: cawkwell_gxtb_predictions.csv  cawkwell_input.csv  cawkwell_si_atom_counts.csv  comparison_workflow  plot_training_data.py  plot_zinc_vs_cawkwell.py  zinc_gxtb_predictions.csv  zinc_sample_1000.csv
scripts/: atct_to_smiles.py  scrape_atct.py
tests/: conftest.py  test_atom_counts.py  test_atom_equivalents.py  test_cache.py  test_cli.py  test_conformers.py  test_data.py  test_pipeline.py  (+4 more)
(+6 files in other folders)
